--- a/style.css
+++ b/style.css
@@ -135,6 +135,12 @@ h1{
     font-size: 20px;
 }
 
+.emptymsg{
+    display: block;
+    position: absolute;
+    left: 30%;
+    top: 40%;
+}
 
 @keyframes fade-in {
     from{
